[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Interactables/LevelMechanics/CenterSprite.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scenes/Interactables/LevelMechanics/PoweredPlatform.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8.5 )

[node name="PoweredPlatform" type="Node2D"]
script = ExtResource( 3 )

[node name="PlatformManager" type="Node2D" parent="."]

[node name="PivotPoint" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "Inactive"
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 128 )

[node name="PositiveStorePoint" type="Position2D" parent="."]
position = Vector2( 0, -64 )

[node name="Outlet" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Outlet"]
position = Vector2( 0, -8.5 )
shape = SubResource( 2 )
